--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
     "lib": "lib"
   },
   "scripts": {
-    "test": "jest"
+    "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js"
+  },
+  "jest": {
+    "transform": {}
   },
   "author": "",
   "license": "ISC",
